--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,9 @@
-# NÃO PRECISA MAIS DE 'version'
+version: "3.8"
 
 services:
-  # Serviço 1: Redis (Cache e Contador Atômico)
   redis:
     image: redis:alpine
     container_name: url_redis
-    # Mapeia a porta do contêiner (6379) para a do seu computador (6379)
-    ports:
-      - "6379:6379"
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 5s
@@ -16,13 +12,9 @@ services:
     networks:
       - app_network
 
-  # Serviço 2: Cassandra (Banco de Dados Principal)
   cassandra:
     image: cassandra:latest
     container_name: url_cassandra
-    # Mapeia a porta do contêiner (9042) para a do seu computador (9042)
-    ports:
-      - "9042:9042"
     healthcheck:
       test: ["CMD-SHELL", "cqlsh -e 'DESCRIBE KEYSPACES'"]
       interval: 15s
@@ -34,6 +26,58 @@ services:
       - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
       - HEAP_NEWSIZE=128M
       - MAX_HEAP_SIZE=1024M
+    ports:
+      - "9042:9042"
+    networks:
+      - app_network
+
+  # --- Serviços da Aplicação Atualizados ---
+
+  app1:
+    build:
+      context: . # O contexto é a raiz (onde está o pyproject.toml)
+      dockerfile: app/Dockerfile # O caminho para o Dockerfile
+    container_name: url_app1
+    # As variáveis de ambiente agora são lidas pelo config.py
+    environment:
+      - REDIS_HOST=redis
+      - CASSANDRA_HOST=cassandra
+    depends_on:
+      redis:
+        condition: service_healthy
+      cassandra:
+        condition: service_healthy
+    networks:
+      - app_network
+
+  app2:
+    build:
+      context: .
+      dockerfile: app/Dockerfile
+    container_name: url_app2
+    environment:
+      - REDIS_HOST=redis
+      - CASSANDRA_HOST=cassandra
+    depends_on:
+      redis:
+        condition: service_healthy
+      cassandra:
+        condition: service_healthy
+    networks:
+      - app_network
+
+  # --- Nginx (Load Balancer) ---
+
+  lb:
+    image: nginx:latest
+    container_name: url_nginx_lb
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    ports:
+      - "80:80"
+    depends_on:
+      - app1
+      - app2
     networks:
       - app_network
 
